src/objects/EmailTracker__c.object
<CustomObject>
    <description>Object to store the email reminders for the Contact Manager VOE OHRM Surveys i.e. Hiring manager, Supervisor, etc</description>
    <fields>
        <fullName>FromContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact who sent the email.</description>
        <label>From Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Trackers (From Contact)</relationshipLabel>
        <relationshipName>Email_Trackers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hired_Employee_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hired Employee ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Trackers (Hired Employee ID)</relationshipLabel>
        <relationshipName>Email_Trackers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hired_Employee__c</fullName>
        <description>This field is used to populate who was hired that caused the hiring survey to fire.</description>
        <label>Hired Employee</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Email for individual trackers in an email thread.</description>
        <label>Parent</label>
        <referenceTo>EmailTracker__c</referenceTo>
        <relationshipLabel>Email Trackers</relationshipLabel>
        <relationshipName>Email_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Send</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendDate__c</fullName>
        <description>Date the email was or will be sent.</description>
        <label>Send Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the email, Pending or Responded.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_FirstName__c</fullName>
        <formula>ToContact__r.FirstName</formula>
        <label>Supervisor FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_LastName__c</fullName>
        <formula>ToContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyURL__c</fullName>
        <label>Survey URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ToContact_Email__c</fullName>
        <formula>ToContact__r.Email</formula>
        <label>To Contact (Email)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToContact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact Recipient</description>
        <label>To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Trackers</relationshipLabel>
        <relationshipName>Email_Trackers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Options are 1-1 with Survey Master Record Names</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VOE - Hiring Manager Survey</fullName>
                </value>
                <value>
                    <fullName>VOE - New Supervisor Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SendDate__c</columns>
        <columns>Purpose__c</columns>
        <columns>Status__c</columns>
        <columns>ToContact__c</columns>
        <columns>Parent__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ET-{00000000}</displayFormat>
        <label>Email Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Trackers</pluralLabel>
    <recordTypes>
        <fullName>OHRM_Survey</fullName>
        <active>true</active>
        <description>Record Type for Emails related to Surveys</description>
        <label>OHRM Survey</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>